--- a/qna_backend/requirements.txt
+++ b/qna_backend/requirements.txt
@@ -15,3 +15,6 @@ PyYAML==6.0.2
 sqlparse==0.5.3
 uritemplate==4.1.1
 django-cors-headers==4.7.0
+langchain==0.3.7
+langchain-openai==0.2.8
+openai==1.51.2
