CheckPoint - cgcd5cc745

--- a/qna_backend/.env.example
+++ b/qna_backend/.env.example
@@ -1,4 +1,15 @@
-# Optional: if provided, LLM will enhance responses
-OPENAI_API_KEY=sk-your-key
-# Optional: override model name
+# Django settings environment variables
+# Comma-separated hostnames (no spaces recommended)
+DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1,.kavia.ai,testserver
+
+# Comma-separated list of scheme+host+port values (required by Django 4+)
+# Example: https://vscode-internal-24966-beta.beta01.cloud.kavia.ai:4000
+DJANGO_CSRF_TRUSTED_ORIGINS=http://localhost,http://127.0.0.1,https://vscode-internal-24966-beta.beta01.cloud.kavia.ai:4000
+
+# CORS settings (used if django-cors-headers is present)
+# Comma-separated list of allowed origins
+CORS_ALLOWED_ORIGINS=http://localhost,http://127.0.0.1,https://vscode-internal-24966-beta.beta01.cloud.kavia.ai:4000
+
+# OpenAI (optional)
+OPENAI_API_KEY=
 OPENAI_MODEL=gpt-4o-mini
